@@ -559,6 +559,9 @@ our %Lexicon =
 =begin comment
 
 To translate:
+   'Shelve'
+   'and Shelve'
+   'and'
   '[_1] Site [_2] Permissions' => '[_1] [_2] Permissions', # Site Category Permissions
   'All Categories' => 'All Categories',
   'All' => 'All',
